# arrival

./: Cargo.toml
.github/workflows/: aslp.yml  ci.yml  explorer.yml
cranelift/codegen/: build.rs
cranelift/codegen/meta/src/: gen_isle.rs  isle.rs
cranelift/codegen/src/: fpconst.isle  inst_specs.isle  inst_tags.isle  lib.rs  prelude.isle  prelude_lower.isle  prelude_spec.isle
cranelift/codegen/src/isa/aarch64/: inst.isle  lower.isle  lower_dynamic_neon.isle
cranelift/codegen/src/isa/aarch64/inst/: imms.rs
cranelift/codegen/src/isa/pulley_shared/: lower.isle
cranelift/codegen/src/isa/riscv64/: inst.isle  inst_vector.isle  lower.isle
cranelift/codegen/src/isa/s390x/: inst.isle  lower.isle
cranelift/codegen/src/isa/x64/: inst.isle
cranelift/codegen/src/machinst/: isle.rs  lower.rs
cranelift/isle/isle/src/: ast.rs  codegen.rs  parser.rs  printer.rs  serialize.rs  trie_again.rs
cranelift/isle/veri/: README.md
cranelift/isle/veri/docs/: language.md
cranelift/isle/veri/isaspec/src/: aarch64.rs  configure.rs  constraints.rs  instructions.rs  lib.rs  spec.rs
cranelift/isle/veri/meta/data/: cliftags.json  wasm2clif.json
cranelift/isle/veri/meta/script/: cliftags.py  generate.sh  wasm2clif.py
cranelift/isle/veri/veri/: Cargo.toml  build.rs
cranelift/isle/veri/veri/script/: generated_isle_files.sh  spec_lines.sh
cranelift/isle/veri/veri/script/verify/: ci.sh  eval.sh  mvp.sh
cranelift/isle/veri/veri/src/: program.rs  runner.rs  solver.rs  spec.rs  type_inference.rs  types.rs  veri.rs
cranelift/isle/veri/veri/src/encoded/: mod.rs
crates/cli-flags/src/: lib.rs
crates/cranelift/: Cargo.toml
(+16 files in other folders)
