[package]
name = "cranelift-isle-veri"
version = "0.1.0"
edition.workspace = true

[dependencies]
cranelift-isle = { version = "*", path = "../../isle/", features = ["fancy-errors", "logging"] }
cranelift-codegen-meta = { version = "*", path = "../../../codegen/meta" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true, features = ['std', 'backtrace'] }
clap = { workspace = true, features = ['default', 'env'] }
easy-smt = { git = "https://github.com/mmcloughlin/easy-smt.git", rev = "2e8f6364a74ee77607fc9ea2d9ed0f12a24abaef" }
rayon = "1"

[dev-dependencies]
tempfile = { workspace = true }
cranelift-isle-veri-test-macros = { path = "../test-macros" }
