[package]
name = "cranelift-isle-veri"
version = "0.1.0"
edition.workspace = true

[dependencies]
cranelift-isle = { version = "*", path = "../../isle/", features = ["fancy-errors", "logging"] }
cranelift-codegen-meta = { version = "*", path = "../../../codegen/meta" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true, features = ['std', 'backtrace'] }
clap = { workspace = true, features = ['default', 'env'] }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
easy-smt = { git = "https://github.com/elliottt/easy-smt.git", rev = "4314c77609dbd80b1aaacf41308a4da46d0288cc" }
rayon = "1"

[dev-dependencies]
tempfile = { workspace = true }
cranelift-isle-veri-test-macros = { path = "../test-macros" }
